TextEditor - fixed unaligned icons

--- a/client/src/panels/common/TextEditor/CodePart.module.css
+++ b/client/src/panels/common/TextEditor/CodePart.module.css
@@ -36,10 +36,15 @@
         border: 1px solid var(--bg-color-5);
 
         font-size: 100%;
-        >*{
-            scale: 2;
-        }
     }
+}
+
+.icon{
+    scale: 2;
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container.unsaved{
